--- a/public/wallet-withdraw.html
+++ b/public/wallet-withdraw.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Wypłata | Portfel Masterpass</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/style.css?v=2" />
 </head>
 <body>
   <div class="container">
