--- a/public/wallet-dashboard.html
+++ b/public/wallet-dashboard.html
@@ -11,7 +11,7 @@
 <body>
   <div class="page-container">
     <div class="form-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Masterpass_Logo.svg/512px-Masterpass_Logo.svg.png" alt="Masterpass logo" class="logo" />
+      <img src="https://www.masterpass.pl/img/masterpass_logo.svg" alt="Masterpass logo" class="logo" />
 
       <h1>Zaloguj się</h1>
       <p class="subtitle">Zaloguj się do swojego portfela Masterpass™</p>
