--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <div class="banner">
     <div class="top-line"></div>
     <div class="banner-content">
-      <h1 class="banner-title" id="main-title">Zaloguj się lub aktywuj portfel Masterpass™ od Mastercard®</h1>
+      <h1 class="banner-title" id="main-title">
+        Zaloguj się lub aktywuj portfel Masterpass™ od Mastercard®
+      </h1>
       <div class="lang-switcher">
         <div class="flag" id="pl" title="Polski"></div>
         <div class="flag" id="en" title="English"></div>
@@ -20,32 +22,51 @@
   </div>
 
   <main class="wrapper">
-    <section class="benefits">
-      <h2>Masterpass ™</h2>
+    <section class="left-panel">
+      <h2>Masterpass™</h2>
       <p id="benefits-title">to wiele korzyści:</p>
       <ul class="benefit-list">
-        <li><span class="icon lock"></span><span id="benefit1">Bezpieczeństwo Płatność, dzięki której sklepy on-line nie widzą danych Twojej karty</span></li>
-        <li><span class="icon clock"></span><span id="benefit2">Szybkość transakcji Dane karty podajesz tylko raz - przy rejestracji</span></li>
-        <li><span class="icon device"></span><span id="benefit3">Wygoda Zakupy on-line na każdym urządzeniu</span></li>
+        <li class="benefit">
+          <span class="icon lock"></span>
+          <span id="benefit1">
+            <strong>Bezpieczeństwo</strong><br />
+            Płatność, dzięki której sklepy on-line nie widzą danych Twojej karty
+          </span>
+        </li>
+        <li class="benefit">
+          <span class="icon clock"></span>
+          <span id="benefit2">
+            <strong>Szybkość transakcji</strong><br />
+            Dane karty podajesz tylko raz – przy rejestracji
+          </span>
+        </li>
+        <li class="benefit">
+          <span class="icon device"></span>
+          <span id="benefit3">
+            <strong>Wygoda</strong><br />
+            Zakupy on-line na każdym urządzeniu
+          </span>
+        </li>
       </ul>
     </section>
 
-    <section class="login">
+    <section class="right-panel">
       <form id="loginForm">
-        <div class="floating-input">
-          <input type="text" id="email" required />
+        <div class="form-group">
+          <input type="text" id="email" required placeholder=" " />
           <label for="email">Adres e-mail lub numer telefonu</label>
         </div>
-        <div class="floating-input">
-          <input type="password" id="password" required />
+
+        <div class="form-group">
+          <input type="password" id="password" required placeholder=" " />
           <label for="password">Hasło</label>
         </div>
 
         <div class="checkbox-group">
-          <div class="custom-checkbox">
+          <label class="checkbox">
             <input type="checkbox" id="remember" />
             <span class="checkmark"></span>
-          </div>
+          </label>
           <label for="remember">Pamiętaj mój login</label>
         </div>
 
@@ -53,19 +74,21 @@
           <a href="#" id="reset-link">Nie znam hasła</a>
         </div>
 
-        <div class="captcha-placeholder">
-          <span>[reCAPTCHA symulacja]</span>
-        </div>
+        <div class="captcha">[reCAPTCHA symulacja]</div>
 
         <button type="submit" id="submitBtn">Zaloguj</button>
       </form>
     </section>
   </main>
 
-  <footer class="footer-black">
-    <p id="cookie-text">Strona wykorzystuje pliki cookie i inne podobne technologie. Korzystając z niej wyrażasz zgodę na ich używanie zgodnie z aktualnymi ustawieniami przeglądarki. <a href="#">Informacja o Plikach Cookie</a>.</p>
+  <footer class="footer-dark">
+    <p id="cookie-text">
+      Strona wykorzystuje pliki cookie i inne podobne technologie. Korzystając z niej wyrażasz zgodę na ich używanie zgodnie z aktualnymi ustawieniami przeglądarki.
+      <a href="#">Informacja o Plikach Cookie</a>.
+    </p>
   </footer>
-  <footer class="footer-white">
+
+  <footer class="footer-light">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Masterpass_Logo.svg/512px-Masterpass_Logo.svg.png" alt="Masterpass logo" class="logo-small" />
     <span id="cookie-agree">Zgoda na pliki cookies</span>
   </footer>
